Fixes to link to resume, fixes to project spacing

--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -9,6 +9,8 @@
     margin: 0 auto;
     text-align:center;
     font-family: 'Raleway', sans-serif;
+    border:5px solid blue;
+    display:flex;
 }
 
 .carouselPic{
@@ -17,7 +19,8 @@
 
 .projectName {
     font-family: 'Raleway', sans-serif;
-    margin-bottom: .5em;
+    margin-top: 1em;
+    margin-bottom: 1em;
     color:white;
     font-size:48px;
     text-shadow: 0px 10px 6px #00000077;
